--- a/.github/workflows/R2S-OpenWrt.yml
+++ b/.github/workflows/R2S-OpenWrt.yml
@@ -6,7 +6,7 @@ on:
 #  watch:
  #   types: started
   workflow_dispatch:
-  
+
 jobs:
   build:
     runs-on: ubuntu-20.04
@@ -15,7 +15,6 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@main
-      
     - name: Show system
       run: |
         echo -e "Total CPU cores\t: $(nproc)"
@@ -122,12 +121,6 @@ jobs:
         echo '================================================================'
         cd openwrt && make -j1 V=s
         
-    - name: Cleaning
-      run: |
-        df -h
-        cd openwrt/bin/targets/rockchip/armv8
-        /bin/bash ../../../../../SCRIPTS/06_cleaning.sh
-        
     - name: Print Disk Space After
       run: df -h
       
@@ -135,22 +128,27 @@ jobs:
       uses: actions/upload-artifact@main
       with:
         name: R2S-GC404-bin
-        path: openwrt/bin
-              
-    - name: Assemble Artifact
-      id: assemble_artifact
+        path: openwrt/bin/
+             
+    - name: Organize files
+      id: organize
       run: |
         rm -rf ./artifact/
         mkdir -p ./artifact/
-        cp openwrt/bin/targets/rockchip/armv8/*squashfs-sysupgrade.img.gz ./artifact/
-        cd openwrt
-        cd ..
-        zip -r artifact.zip ./artifact/
-        release_tag="R2S-GC404-$(date +%Y-%m-%d)"
-        echo "##[set-output name=release_tag;]$release_tag"
+        mv openwrt/bin/targets/rockchip/armv8/*sysupgrade.img* ./artifact/
+        cd ./artifact/
+        ls -Ahl
+        gzip -d *.gz && exit 0
+        gzip --best *.img
+        ls -Ahl
+        sha256sum openwrt*r2s* | tee R2S-GC404-$(date +%Y-%m-%d)-21.02.sha256sum
+        zip R2S-GC404-$(date +%Y-%m-%d)-21.02-ext4.zip *r2s*ext4*
+        zip R2S-GC404-$(date +%Y-%m-%d)-21.02-sfs.zip *r2s*squashfs*
+        ls -Ahl
         
-    - name: Upload Artifact
+    - name: Upload artifact
       uses: actions/upload-artifact@main
       with:
-        name: ${{ steps.assemble_artifact.outputs.release_tag }}-ROM
-        path: ./artifact.zip
+        name: OpenWRT_21.02
+        path: ./artifact/
+
