--- a/.github/workflows/R4S-OpenWrt.yml
+++ b/.github/workflows/R4S-OpenWrt.yml
@@ -128,28 +128,6 @@ jobs:
     - name: Upload bin directory
       uses: actions/upload-artifact@main
       with:
-        name: R4S-GC404-bin
+        name: OpenWRT-21.02-R4S-GC404-bin
         path: openwrt/bin/
               
-    - name: Organize files
-      id: organize
-      run: |
-        rm -rf ./artifact/
-        mkdir -p ./artifact/
-        mv openwrt/bin/targets/rockchip/armv8/*sysupgrade.img* ./artifact/
-        cd ./artifact/
-        ls -Ahl
-        gzip -d *.gz && exit 0
-        gzip --best *.img
-        ls -Ahl
-        sha256sum openwrt*r4s* | tee R4S-GC404-$(date +%Y-%m-%d)-21.02.sha256sum
-        zip R4S-GC404-$(date +%Y-%m-%d)-21.02-ext4.zip *r4s*ext4*
-        zip R4S-GC404-$(date +%Y-%m-%d)-21.02-sfs.zip *r4s*squashfs*
-        ls -Ahl
-        
-    - name: Upload artifact
-      uses: actions/upload-artifact@main
-      with:
-        name: OpenWRT_21.02
-        path: ./artifact/
-
