--- a/.github/workflows/X86-OpenWrt.yml
+++ b/.github/workflows/X86-OpenWrt.yml
@@ -115,12 +115,12 @@ jobs:
         make -j${Make_Process} V=w
         echo $?
         
-    - name: If Error
-      if: steps.compileopenwrt.outcome == 'failure'
-      run: |
-        cat openwrt/.config
-        echo '================================================================'
-        cd openwrt && make -j1 V=s
+ #   - name: If Error
+ #     if: steps.compileopenwrt.outcome == 'failure'
+ #     run: |
+#        cat openwrt/.config
+ #       echo '================================================================'
+#        cd openwrt && make -j1 V=s
         
     - name: Print Disk Space After
       run: df -h
